<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_position"
        android:enabled="true"
        android:icon="@drawable/ic_directions_black_24dp"
        android:title="@string/menu_bottom1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_location"
        android:enabled="true"
        android:icon="@drawable/ic_add_location_black_24dp"
        android:title="@string/menu_bottom2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_friends"
        android:enabled="true"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/menu_bottom3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_heat"
        android:enabled="true"
        android:icon="@drawable/ic_whatshot_black_24dp"
        android:title="@string/menu_bottom4"
        app:showAsAction="ifRoom" />
</menu>